# tv-trading-bot

./: Cargo.toml  deploy.sh
src/: server.rs
src/api/: mod.rs  state.rs  trade.rs  trade_helpers.rs  websocket.rs
src/configs/: db.rs  mod.rs
src/constants/: mod.rs  pagination.rs  trade.rs
src/models/: api.rs  db.rs  mod.rs  state.rs  trade.rs  tradingview.rs  websocket.rs
src/routes/: mod.rs  trade.rs
src/tests/: mod.rs  trade.rs
