[package]
name = "tv-trading-bot"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "tv-trading-bot"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
hyper = "1.5.1"
mongodb = "3.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tower = "0.5.1"